[package]
name = "portman_client"
version = "0.1.0"
edition = "2018"
description="NSCLDAQ Port manager client"
homepage="http://docs.nscl.msu.edu/daq"
license="GPL-2.0"
repository="https://gitlab.msu.edu"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.2.1"